# os_in_rust

./: Cargo.toml  README.md  test.img
src/: lib.rs  main.rs
src/arch/: mod.rs
src/arch/x86_64/: context_switch.asm  device.rs  idt.rs  mod.rs
src/arch/x86_64/interrupts/: irq.rs  syscall.rs
src/arch/x86_64/memory/: mod.rs  stack_allocator.rs
src/arch/x86_64/memory/heap/: bump_allocator.rs
src/console/: console.rs  mod.rs
src/demo_task/: mod.rs
src/device/: hard_disk.rs  mod.rs  pic_8259.rs  vga.rs
src/device/keyboard/: ps2.rs
src/fs/: block_device.rs  file.rs  mod.rs  vfs.rs
src/sync/: semaphore.rs
src/syscall/: process.rs
src/syscall/io/: io.rs  port.rs
src/task/scheduler/: preemptive.rs
